git fix  problem of last commit

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,21 +11,33 @@
         crossorigin="anonymous" />
     <!-- INSERT HERE LIBRARYS -->
 </head>
-
-
-
-<body>
-
-    <!-- MENU -->
-    <header class="main-header">
-        <div class="logo">
-            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
-        </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
+    <body>
+        <!-- MENU -->
+        <header class="main-header">
+            <div class="logo">
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
         <h2 id="contitle">Contact</h2>
         <!-- MAP -->
         <div id="contact-info">
@@ -75,17 +86,76 @@
                 </label>
             </form>
         </section>
-        <div class="main2">
+        <div class="main">
+            <div id="newsletter">
+                <h4 class="title title-news">Newsletter</h4>
+                <form action="" class="news-inputs">
+                    <label class="news-name">Nom / Prénom :
+                        <input type="text" name="news-name" id="news-name" placeholder="Votre prénom et nom ici " />
+                    </label>
+                    <label class="news-name-mobile">
+                        <input type="text" name="news-name" id="news-name" placeholder="Nom prénom" />
+                    </label>
+                    <label class="news-mail">E-mail:
+                        <input type="email" name="mail" placeholder="Votre email ici" />
+                    </label>
+                    <label class="news-mail-mobile">
+                        <input type="email" name="mail" placeholder="E-mail:" />
+                    </label>
+                    <label class="check">
+                        <input type="checkbox" name="conditions" id="conds" />
+                        <span class="checkmark"></span>
+                        En cochant cette case j'accepte les termes et conditions
+                        d'utilisations
+                    </label>
+                    <label class="check-mobile">
+                        <input type="checkbox" name="conditions" id="conds" />
+                        <span class="checkmark"></span>
+                        <span class="check-text">J'accepte les conditions d'utilisations générales
+                            d'utilisation du site</span>
+                    </label>
+                    <div id="news-btn">S'inscrire</div>
+                </form>
+            </div>
         </div>
+        <!-- FOOTER -->
         <footer>
             <div id="footer">
                 <div id="footer-head">
-                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
-                    <ul id="foot-links">
-                        <li><a href="cgu.html">CGU</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="mention.html"> Mentions légales </a></li>
+                    <div id="campus-logo-mobile">
+                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                    </div>
+                    <ul class="networks-icons-mobile">
+                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
+                                    class="fab fa-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li><a
+                                href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                    class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <div class="large-links">
+                        <ul class="networks-icons-large">
+                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
+                                        class="fab fa-instagram"></i></a>
+                            </li>
+                            <li><a href="https://www.facebook.com/campusdulac/"><i
+                                        class="fab fa-facebook-f"></i></a> </li>
+                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li><a
+                                    href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
+                                        class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                        <ul id="foot-links">
+                            <li><a href="cgu.html">CGU</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="mention.html"> Mentions légales </a></li>
+                        </ul>
+                    </div>
                     <ul>
                         <li>Campus Du lac Rive Gauche</li>
                         <li>10 Rue Rene Cassin</li>
@@ -101,10 +171,14 @@
                         <li>Telephone: 05 56 79 52 00</li>
                     </ul>
                 </div>
+                <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
             </div>
-            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
         </footer>
+        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="./assets/js/dist/scripts.min.js"></script>
-</body>
-
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
