--- a/create-1.html
+++ b/create-1.html
@@ -60,7 +60,6 @@
                             href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
                                 class="fab fa-linkedin-in"></i></a></li>
                 </ul>
-
                 <div class="large-links">
                     <ul class="networks-icons-large">
                         <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
@@ -93,6 +92,7 @@
                 </ul>
             </div>
         </div>
+    </footer>
 </body>
 
 </html>
