--- a/create-2.html
+++ b/create-2.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="assets/css/dist/style.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-
 <body>
     <header class="main-header">
         <div class="logo">
@@ -95,6 +93,7 @@
                 </ul>
             </div>
         </div>
+    </footer>
 </body>
 
 </html>
