--- a/portfolio-section-graph.html
+++ b/portfolio-section-graph.html
@@ -1,158 +1,131 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-
-<body>
-    <header class="main-header">
-        <div class="logo">
-            <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="logo">
+                <img src="/assets/img/src/logo_campus_transparent.PNG.png" alt="">
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="img-header">
+            <h1>Graphiste</h1>
         </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </header>
-    <nav class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li id="portfolio">
-                <a>Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                    <li><a href="portfolio-section-design.html">Web Design</a></li>
-                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="img-header">
-        <h1>Graphiste</h1>
-    </div>
-    <section class="portfolio">
-        <article id="project-dev-1" class="card">
-            <div class="body-card">
-                <a href="project.html">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
-                </a>
-            </div>
-        </article>
-        <article id="project-dev-2" class="card">
-            <div class="body-card">
-                <a href="project.html">
-                    <h2>Projet</h2>
-                    <h3>Nom prénom</h3>
-                </a>
-            </div>
-            </header>
-            <nav class="main-menu" id="main-menu">
-                <ul class="first-menu">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li id="portfolio">
-                        <a>Portfolio</a>
-                        <ul class="second-menu" id="secondary-menu">
-                            <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                            <li><a href="portfolio-section-design.html">Web Design</a></li>
-                            <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                            <li><a href="portfolio-section-graph.html">Graphiste</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="img-header">
-                <h1>Graphiste</h1>
-            </div>
-            <section class="portfolio">
-                <article data-aos="fade-right" data-aos-duration="1000" id="project-dev-1" class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-up" data-aos-duration="1000" id="project-dev-2" class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-left" data-aos-duration="1000" id="project-dev-3" class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" id="project-dev-4"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="project-dev-5"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="600" id="project-dev-6"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="400" id="project-dev-7"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="500" id="project-dev-8"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
-                    </div>
-                </article>
-                <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="600" id="project-dev-9"
-                    class="card">
-                    <div class="body-card">
-                        <a href="project.html">
-                            <h2>Projet</h2>
-                            <h3>Nom prénom</h3>
-                        </a>
+        <section class="portfolio">
+            <article data-aos="fade-right" data-aos-duration="1000" id="project-dev-1" class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-up" data-aos-duration="1000" id="project-dev-2" class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-left" data-aos-duration="1000" id="project-dev-3" class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-dev-4"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-dev-5"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-dev-6"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-right" data-aos-duration="1000" data-aos-offset="300" id="project-dev-7"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-up" data-aos-duration="1000" data-aos-offset="400" id="project-dev-8"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+            <article data-aos="fade-left" data-aos-duration="1000" data-aos-offset="500" id="project-dev-9"
+                class="card">
+                <div class="body-card">
+                    <a href="project.html">
+                        <h2>Projet</h2>
+                        <h3>Nom prénom</h3>
+                    </a>
+                </div>
+            </article>
+        </section>
+        <!-- FOOTER -->
+        <div class="main2"></div>
+        <footer>
+            <div id="footer">
+                <div id="footer-head">
+                    <div id="campus-logo-mobile">
+                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
                     </div>
                     <ul class="networks-icons-mobile">
                         <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
@@ -163,16 +136,12 @@
                                 href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
                                     class="fab fa-linkedin-in"></i></a></li>
                     </ul>
-
                     <div class="large-links">
                         <ul class="networks-icons-large">
-                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i
-                                        class="fab fa-instagram"></i></a>
+                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
                             </li>
-                            <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a>
-                            </li>
-                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a>
-                            </li>
+                            <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
                             <li><a
                                     href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i
                                         class="fab fa-linkedin-in"></i></a></li>
@@ -197,15 +166,13 @@
                         <li>33504 Libourne Cedex</li>
                         <li>Telephone: 05 56 79 52 00</li>
                     </ul>
-                    </div>
-                    <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
-                    </footer>
-                    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-                    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-                    <script src="./assets/js/dist/scripts.min.js"></script>
-                    <script>
-                        AOS.init();
-                    </script>
-</body>
-
+                </div>
+            </div>
+        </footer>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="./assets/js/dist/scripts.min.js"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
