--- a/userport.html
+++ b/userport.html
@@ -1,50 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projet Hackaton</title>
-    <link rel="stylesheet" href="assets/css/dist/style.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-        crossorigin="anonymous" />
-    <!-- INSERT HERE LIBRARYS -->
-</head>
-
-<body>
-    <header class="main-header">
-        <div class="logo">
-            <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
-        </div>
-        <div class="burger-bar" id="burger">
-            <div class="first-line"></div>
-            <div class="second-line"></div>
-            <div class="third-line"></div>
-        </div>
-    </header>
-    <nav class="main-menu" id="main-menu">
-        <ul class="first-menu">
-            <li><a href="index.html">Accueil</a></li>
-            <li id="portfolio">
-                <a>Portfolio</a>
-                <ul class="second-menu" id="secondary-menu">
-                    <li><a href="portfolio-section-dev.html">Web Devs</a></li>
-                    <li><a href="portfolio-section-design.html">Web Design</a></li>
-                    <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
-                    <li><a href="portfolio-section-graph.html">Graphiste</a></li>
-                </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="img-header">
-        <h1>Sam Oustache</h1>
-    </div>
-    <div class="user-infos">
-        <div id="user-port-img">
-            <img src="./assets/img/src/author.jpg" alt="Sam Oustache">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projet Hackaton</title>
+        <link rel="stylesheet" href="assets/css/dist/style.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+            integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+            crossorigin="anonymous" />
+        <!-- INSERT HERE LIBRARYS -->
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="logo">
+                <a href="index.html"><img src="/assets/img/src/logo_campus_transparent.PNG.png" alt=""></a>
+            </div>
+            <div class="burger-bar" id="burger">
+                <div class="first-line"></div>
+                <div class="second-line"></div>
+                <div class="third-line"></div>
+            </div>
+        </header>
+        <nav class="main-menu" id="main-menu">
+            <ul class="first-menu">
+                <li><a href="index.html">Accueil</a></li>
+                <li id="portfolio">
+                    <a>Portfolio</a>
+                    <ul class="second-menu" id="secondary-menu">
+                        <li><a href="portfolio-section-dev.html">Web Devs</a></li>
+                        <li><a href="portfolio-section-design.html">Web Design</a></li>
+                        <li><a href="portfolio-section-cpw.html">Chef Projet Marketing</a></li>
+                        <li><a href="portfolio-section-graph.html">Graphiste</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="img-header">
+            <h1>Sam Oustache</h1>
         </div>
         <div class="user-infos">
             <div id="user-port-img">
@@ -52,12 +46,9 @@
             </div>
             <h2 class="user-title">Sam Oustache</h2>
             <div class="user-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus quis minus ea consequatur
-                    possimus
-                    laboriosam autem nihil laudantium omnis, magnam inventore temporibus rem at. Odit pariatur sit earum
-                    rem
-                    repellat ut quod distinctio, accusamus laudantium, libero inventore. Consectetur veniam velit
-                    suscipit
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae delectus quis minus ea consequatur possimus
+                    laboriosam autem nihil laudantium omnis, magnam inventore temporibus rem at. Odit pariatur sit earum rem
+                    repellat ut quod distinctio, accusamus laudantium, libero inventore. Consectetur veniam velit suscipit
                     recusandae aliquid iusto assumenda ex perspiciatis nulla vero?</p>
             </div>
         </div>
@@ -119,12 +110,31 @@
         <footer>
             <div id="footer">
                 <div id="footer-head">
-                    <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log">
-                    <ul id="foot-links">
-                        <li><a href="cgu.html">CGU</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="mention.html"> Mentions légales </a></li>
+                    <div id="campus-logo-mobile">
+                        <img src="./assets/img/src/logo-white.svg" alt="logo-campus" id="campus-log" />
+                    </div>
+                    <ul class="networks-icons-mobile">
+                        <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                        <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
+                    <div class="large-links">
+                        <ul class="networks-icons-large">
+                            <li><a href="https://www.instagram.com/campusdulac/?hl=fr"><i class="fab fa-instagram"></i></a>
+                            </li>
+                            <li><a href="https://www.facebook.com/campusdulac/"><i class="fab fa-facebook-f"></i></a> </li>
+                            <li><a href="https://twitter.com/campusdulac?lang=fr"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/campus-du-lac-formation-professionnelle/?originalSubdomain=fr">
+                            <i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                        <ul id="foot-links">
+                            <li><a href="cgu.html">CGU</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="mention.html"> Mentions légales </a></li>
+                        </ul>
+                    </div>
                     <ul>
                         <li>Campus Du lac Rive Gauche</li>
                         <li>10 Rue Rene Cassin</li>
@@ -141,14 +151,6 @@
                     </ul>
                 </div>
             </div>
-            <p id="copyright">Copyright © All rights reserved 2021 Team 4</p>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="./assets/js/dist/scripts.min.js"></script>
-        <script>
-            AOS.init();
-        </script>
-</body>
-
-</html>
+    </body>
+    </html>
